# dotfiles

./: CONTRIBUTING.md  CONTRIBUTIONS.md  FAQ.md  LICENSE  NEW_FEATURES.md  README.md  install-local.sh  install.sh  package-lock.json  package.json
.copilot/: copilot-instructions.md  custom-instructions.md
.copilot/skills/address-pr-review/: SKILL.md
.copilot/skills/create-issue/: SKILL.md
.copilot/skills/create-pr/: SKILL.md
.copilot/skills/gh-api-markdown/: SKILL.md
.copilot/skills/manage-prs/: SKILL.md
.copilot/skills/review-pr/: SKILL.md
.copilot/skills/validate-changes/: SKILL.md
.github/workflows/: notify-internal.yml
src/: Cargo.toml  README.md  render-script.ts
src/src/: cli.rs  dedup.rs  hasher.rs  main.rs  metadata.rs  report.rs  scanner.rs
